# speed-tracer

./: CMakeLists.txt  Camera.cpp  README.md  SpeedTracer.cpp  UDP.cpp  do-nothing.sh  webcam-settings.sh  webcam.py
