cmake_minimum_required(VERSION 2.8)
project( SpeedTracer )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} "/usr/include/flycapture" )
find_library(FLYCAPTURE2 flycapture)
add_executable( SpeedTracer SpeedTracer.cpp )
target_link_libraries( SpeedTracer ${OpenCV_LIBS} ${FLYCAPTURE2} )
